# blog-server

./: .gitignore  Cargo.toml  Procfile  README  main.py  requirements.txt  schema.sql
api/: urls.py  views.py
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
migrations/2020-02-11-140007_basic/: down.sql  up.sql
page/: admin.py  models.py  views.py
page/migrations/: 0001_initial.py  0002_page_script.py
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
src/frontend/: mod.rs
src/frontend/static/: index.html  index.js  layout.css
src/models/: blog.rs  mod.rs  page.rs  tweet.rs  user.rs
src/views/: auth.rs  blog.rs  mod.rs  page.rs  tweet.rs
static/css/: layout.css  login.css
templates/: base.html  blog.html  blog_entry.html  index.html  login.html  tweet.html
templates/admin/: admin.html  blog.html  blog_entry.html  tweet.html
tweet/: admin.py  models.py
tweet/migrations/: 0001_initial.py
zone/: settings.py  urls.py
zone/static/css/: layout.css
zone/templates/: base.html  blog.html  blog_detail.html  home.html  tweet.html
