[package]
name = "api"
version = "0.1.0"
authors = ["E-Neo <e-neo@qq.com>"]
edition = "2018"

[dependencies]
actix-identity = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
rust-argon2 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
